--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,8 @@ Package: downscaleR.keras
 Depends:
     R(>= 3.1.0),
     transformeR(>= 1.5.0),
-    keras
+    keras,
+    tensorflow
 Imports:
     abind,
     utils,
