--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: downscaleR.keras
 Depends:
     R(>= 3.1.0),
     transformeR(>= 1.5.0),
-    keras,
-    tensorflow
+    keras(>=2.2.2),
+    tensorflow(>=2.0.0)
 Imports:
     abind,
     utils,
