--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,12 +6,19 @@ export(downscalePredict.keras)
 export(downscaleTrain.keras)
 export(prepareData.keras)
 export(prepareNewData.keras)
+export(relevanceMaps)
 import(keras)
 import(tensorflow)
+importFrom(MASS,ginv)
+importFrom(MASS,mvrnorm)
 importFrom(abind,abind)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
 importFrom(magrittr,extract2)
+importFrom(stats,cov)
+importFrom(stats,rgamma)
+importFrom(stats,runif)
+importFrom(transformeR,aggregateGrid)
 importFrom(transformeR,array3Dto2Dmat)
 importFrom(transformeR,bindGrid)
 importFrom(transformeR,getCoordinates)
