relevanceMaps with mergeGrid

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,8 +29,11 @@ importFrom(transformeR,getTemporalIntersection)
 importFrom(transformeR,getVarNames)
 importFrom(transformeR,grid2PCs)
 importFrom(transformeR,gridArithmetics)
+importFrom(transformeR,interpGrid)
 importFrom(transformeR,isRegular)
 importFrom(transformeR,makeMultiGrid)
 importFrom(transformeR,mat2Dto3Darray)
+importFrom(transformeR,mergeGrid)
 importFrom(transformeR,redim)
+importFrom(transformeR,subsetDimension)
 importFrom(transformeR,subsetGrid)
