new function computeTemperature

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(bernouilliGammaLoss)
 export(computeRainfall)
+export(computeTemperature)
 export(downscaleCV.keras)
 export(downscalePredict.keras)
 export(downscalePredictHidden.keras)
@@ -20,6 +21,7 @@ importFrom(magrittr,"%>%")
 importFrom(magrittr,extract2)
 importFrom(stats,cov)
 importFrom(stats,rgamma)
+importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(transformeR,aggregateGrid)
 importFrom(transformeR,array3Dto2Dmat)
