include PCs and local neighbours in prepareData.keras Some other functions affected by these changes: prepareNewData.keras, downscaleCV.keras (new example)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,6 +2,7 @@ Package: downscaleR.keras
 Depends:
     R(>= 3.1.0),
     transformeR(>= 1.5.0),
+    downscaleR(>= 3.1.0),
     keras(>= 2.2.2),
     tensorflow(>= 2.0.0)
 Imports:
@@ -14,7 +15,6 @@ Imports:
 Suggests:
     loadeR,
     climate4R.datasets,
-    downscaleR,
     visualizeR,
     knitr,
     rmarkdown
