--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ import(tensorflow)
 importFrom(MASS,ginv)
 importFrom(MASS,mvrnorm)
 importFrom(abind,abind)
+importFrom(downscaleR,prepareData)
+importFrom(downscaleR,prepareNewData)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
 importFrom(magrittr,extract2)
