commit after check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(downscalePredict.keras)
 export(downscalePredictHidden.keras)
 export(downscaleTrain.keras)
 export(gaussianLoss)
+export(integratedGradients)
 export(prepareData.keras)
 export(prepareNewData.keras)
 export(relevanceMaps)
@@ -29,6 +30,7 @@ importFrom(transformeR,aggregateGrid)
 importFrom(transformeR,array3Dto2Dmat)
 importFrom(transformeR,binaryGrid)
 importFrom(transformeR,bindGrid)
+importFrom(transformeR,climatology)
 importFrom(transformeR,convert2bin)
 importFrom(transformeR,dataSplit)
 importFrom(transformeR,filterNA)
